# TiagoBears_ColorDetection

./: CMakeLists.txt  README.md  package.xml  setup.py  test.txt  test1.txt  white_balance_test.py
msg/: StringArray.msg
old_files/: pro_color_detection.py  pro_locate_desktop.py
scripts/: color_client.py  color_detec_client.py  color_detec_server.py  color_detection_node.py
src/T_ColorDetection/: color_detector.py
src/TiagoBears_ColorDetection/: color_detector.py
srv/: Getcolor.srv
