<?xml version="1.0"?>
<package>
  <name>TiagoBears_ColorDetection</name>
  <version>2.3.1</version>
  <description>TiagoBears_ColorDetection</description>
  <maintainer email="ruiyoung@stud.tu-darmstadt.de">Ruiyung</maintainer>
  <author email="ruiyoung@stud.tu-darmstadt.de">Ruiyung</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>

</package>